Issue #398 one last image that is too wide.

--- a/themes/custom/ts_wrin/sass/components/_person.scss
+++ b/themes/custom/ts_wrin/sass/components/_person.scss
@@ -250,6 +250,7 @@
     padding: 0 10px 0 20px;
     img {
       border-radius: 50%;
+      width: 100px;
     }
   }
   .leadership {
